--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "@babel/runtime": "^7.11.2",
     "meteor-node-stubs": "^1.0.1",
     "vue": "^2.6.12",
-    "vue-meteor-tracker": "^2.0.0-beta.5"
+    "vue-meteor-tracker": "^2.0.0-beta.5",
+    "vue-router": "^3.5.1",
+    "vuetify": "^2.4.7"
   },
   "meteor": {
     "mainModule": {
